# shovelsite

./: .pre-commit-config.yaml  README.md  app.js  config.py  package-lock.json  package.json  pyproject.toml  server.js
app/: routes.py
app/templates/: index.html
public/css/: style.css  wordant.css
public/js/: blob.js  wordant.js
routes/: about.js  contact.js  index.js  team.js  wordant.js
views/: 404.hbs  about.hbs  contact.hbs  index.hbs  team.hbs  wordant.hbs
